--- a/src/components/back/NavSide/navside.module.css
+++ b/src/components/back/NavSide/navside.module.css
@@ -1,10 +1,10 @@
 .nav_container {
-    background: linear-gradient(0deg, #3358f4, #1d8cf8);
+    background: linear-gradient(0deg, #222, #4a3d8c);
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
     color: #fff;
     height: 100%;
-    min-width: 300px;
+    width: 300px;
     display: flex;
     flex-direction: column;
 }
@@ -17,17 +17,7 @@
 }
 
 .nav_logo {
-    width: 120px;
-}
-
-.nav_user {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-}
-
-.nav_username {
-    word-break: break-word;
+    width: 140px;
 }
 
 .nav_divider {
