--- a/src/pages/back/daytrade/Dashboard/dashboard.module.scss
+++ b/src/pages/back/daytrade/Dashboard/dashboard.module.scss
@@ -1,3 +1,9 @@
+.wrapper {
+    max-height: calc(100vh - 16px);
+    flex-grow: 1;
+    padding: 16px 16px 16px 0;
+}
+
 .greetings_panel {
     display: flex;
     align-items: center;
