--- a/src/pages/back/daytrade/Datasets/Novo/datasets-novo.module.scss
+++ b/src/pages/back/daytrade/Datasets/Novo/datasets-novo.module.scss
@@ -26,3 +26,13 @@
         }
     }
 }
+
+.form_panel {
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .form_container {
+    }
+}
