--- a/src/pages/back/daytrade/Ativos/ativos.module.scss
+++ b/src/pages/back/daytrade/Ativos/ativos.module.scss
@@ -28,3 +28,14 @@
     font-size: 10px;
     margin-left: 3px;
 }
+
+.venc_container {
+    display: flex;
+    flex-grow: 1;
+    height: 500px;
+
+    .venc_tab_container {
+        width: 100%;
+        padding: 24px;
+    }
+}
