--- a/src/pages/back/daytrade/Ativos/ativos.module.scss
+++ b/src/pages/back/daytrade/Ativos/ativos.module.scss
@@ -7,7 +7,7 @@
 }
 .table_cell__custo:after {
     content: 'BRL';
-    font-size: 10px;
+    font-size: 0.7rem;
     margin-left: 3px;
 }
 
@@ -16,7 +16,7 @@
 }
 .table_cell__valorTick:after {
     content: 'BRL';
-    font-size: 10px;
+    font-size: 0.7rem;
     margin-left: 3px;
 }
 
@@ -25,7 +25,7 @@
 }
 .table_cell__ptsTick:after {
     content: 'pts';
-    font-size: 10px;
+    font-size: 0.7rem;
     margin-left: 3px;
 }
 
