--- a/src/pages/back/daytrade/Cenarios/cenarios.module.scss
+++ b/src/pages/back/daytrade/Cenarios/cenarios.module.scss
@@ -4,7 +4,9 @@
 
 .cenarios_panel {
     margin-top: 32px !important;
-    padding: 16px 16px;
-    border: 1px dashed rgba(0, 0, 0, 0.4);
-    border-radius: 4px;
+    padding: 16px 0;
+}
+
+.send_panel {
+    margin-top: 32px;
 }
