--- a/src/pages/back/back.module.scss
+++ b/src/pages/back/back.module.scss
@@ -1,13 +1,10 @@
 .wrapper {
-    height: 100%;
+    min-height: 100vh;
     width: 100%;
-    overflow: auto;
     background-color: #ebf0f5;
 }
 
 .container {
-    height: 100%;
+    min-height: 100vh;
     width: 100%;
-    overflow: auto;
-    align-items: stretch;
 }
