--- a/src/components/ui/Input/input.module.scss
+++ b/src/components/ui/Input/input.module.scss
@@ -1,9 +1,9 @@
 .u_input {
     font-family: IBM Plex Sans, sans-serif;
-    font-size: 0.875rem;
+    font-size: 0.85rem;
     font-weight: 400;
     line-height: 1.5;
-    padding: 6px;
+    padding: 4px;
     width: 100%;
     border-radius: 4px;
     color: #1a2027;
@@ -19,4 +19,13 @@
         border-color: #3399ff;
         outline: 3px solid #80bfff;
     }
+
+    &:disabled {
+        border-color: #e0e3e7;
+        background-color: #e9ecef;
+    }
+}
+
+.textAlign__center {
+    text-align: center;
 }
