--- a/src/components/ui/Input/input.module.scss
+++ b/src/components/ui/Input/input.module.scss
@@ -1,10 +1,14 @@
+.u_container {
+    display: flex;
+}
+
 .u_input {
     font-family: IBM Plex Sans, sans-serif;
     font-size: 0.85rem;
     font-weight: 400;
     line-height: 1.5;
-    padding: 4px;
-    width: 100%;
+    padding: 8px;
+    flex: 1;
     border-radius: 4px;
     color: #1a2027;
     background: #fff;
@@ -12,12 +16,12 @@
     box-shadow: 0px 2px 2px #f3f6f9;
 
     &:hover {
-        border-color: #3399ff;
+        border-color: #1976d2;
     }
 
     &:focus {
-        border-color: #3399ff;
-        outline: 3px solid #80bfff;
+        border-color: #1976d2;
+        outline: 1px solid #80bfff;
     }
 
     &:disabled {
@@ -28,4 +32,8 @@
 
 .textAlign__center {
     text-align: center;
+}
+
+.inputSize__small {
+    padding: 4px;
 }
