--- a/src/pages/back/daytrade/Cenarios/CenarioItem/cenario-item.module.scss
+++ b/src/pages/back/daytrade/Cenarios/CenarioItem/cenario-item.module.scss
@@ -11,6 +11,22 @@
         border-radius: 8px;
     }
 
+    .row_chip__added {
+        color: #2e7d32 !important;
+
+        svg {
+            color: #2e7d32 !important;
+        }
+    }
+
+    .row_chip__deleted {
+        color: #d32f2f !important;
+
+        svg {
+            color: #d32f2f !important;
+        }
+    }
+
     .row_button__last {
         margin-left: auto !important;
     }
