--- a/src/pages/back/daytrade/Dashboard/dashboard.module.scss
+++ b/src/pages/back/daytrade/Dashboard/dashboard.module.scss
@@ -15,3 +15,16 @@
         align-self: center;
     }
 }
+
+.filter__compara {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .filter__compara_label {
+        white-space: nowrap;
+        font-weight: bold;
+        line-height: 0;
+        color: #555;
+    }
+}
