--- a/src/assets/back/scss/global.module.scss
+++ b/src/assets/back/scss/global.module.scss
@@ -1,17 +1,17 @@
-/********************
-*
-* GLOBAL DEFINITIONS
-*
-*********************/
-/************** GLOBAL PAGE WRAPPER ***********/
+///////////////////////////////////////////////////////////////////////////////////////////////////
+// GLOBAL DEFINITIONS
+//
+///////////////////////////////////////////////////////////////////////////////////////////////////
+
+/*------------- GLOBAL PAGE WRAPPER -------------*/
 .wrapper {
     flex-grow: 1;
     padding: 16px 16px 16px 16px;
     margin-left: 0 !important;
 }
-/***************** GLOBAL TITLE ***************/
-/**
-* Referente ao breadcrumbs que fazem as rotas nas paginas
+/*----------------- GLOBAL TITLE ----------------*/
+/*
+    Referente ao breadcrumbs que fazem as rotas nas paginas
 */
 .title_panel {
     display: flex;
@@ -35,9 +35,9 @@
         }
     }
 }
-/**************** GLOBAL FILTERS **************/
-/**
-* Referente a seção de Chips que compem os filtros escolhidos
+/*---------------- GLOBAL FILTERS ---------------*/
+/*
+    Referente a seção de Chips que compem os filtros escolhidos
 */
 .filter_panel {
     display: flex;
@@ -60,10 +60,10 @@
         }
     }
 }
-/************ GLOBAL DATAGRID TABLE ***********/
-/**
-* Referente as areas mais genéricas dos Datagrids. 
-* Coisas mais especificas como Cells serão especificadas nos scss de cada módulo.
+/*------------ GLOBAL DATAGRID TABLE ------------*/
+/*
+    Referente as areas mais genéricas dos Datagrids. 
+    Coisas mais especificas como Cells serão especificadas nos scss de cada módulo.
 */
 .table_panel {
     flex-grow: 1;
