--- a/src/pages/back/daytrade/Dashboard/DatagridOps/datagrid-ops.module.scss
+++ b/src/pages/back/daytrade/Dashboard/DatagridOps/datagrid-ops.module.scss
@@ -7,3 +7,15 @@
     height: 100%;
     flex-grow: 1;
 }
+
+.dg_cell__small {
+    div {
+        font-size: 11px !important;
+    }
+}
+
+.dg_cell__tiny {
+    div {
+        font-size: 9px !important;
+    }
+}
