--- a/src/pages/back/daytrade/Dashboard/dashboard.module.scss
+++ b/src/pages/back/daytrade/Dashboard/dashboard.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 16px 8px 0 8px;
+    padding: 0 8px 0 8px;
 
     .greetings_user {
         font-size: 1rem;
