--- a/src/pages/back/daytrade/Cenarios/CenarioItem/cenario-item.module.scss
+++ b/src/pages/back/daytrade/Cenarios/CenarioItem/cenario-item.module.scss
@@ -46,3 +46,17 @@
 .table_cell__delete {
     width: 10%;
 }
+
+.inputCenter__input {
+    text-align: center;
+}
+
+.inputSmall__input {
+    line-height: 0;
+    padding: 8px;
+}
+
+.no_content__text {
+    font-size: 0.9rem;
+    padding: 16px;
+}
