--- a/src/pages/back/daytrade/Dashboard/dashboard.module.scss
+++ b/src/pages/back/daytrade/Dashboard/dashboard.module.scss
@@ -28,3 +28,18 @@
         color: #555;
     }
 }
+
+.dataset_atualizadoEm {
+    font-size: 10px;
+    font-weight: bold;
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.no_content__wrapper {
+    flex: 1;
+    flex-direction: column;
+}
+
+.no_content__container {
+    flex: 1;
+}
