--- a/src/pages/back/daytrade/Operacoes/Novo/Operacao/operacao.module.scss
+++ b/src/pages/back/daytrade/Operacoes/Novo/Operacao/operacao.module.scss
@@ -49,3 +49,13 @@
     width: 6%;
     align-items: center;
 }
+
+.inputCenter__input {
+    text-align: center;
+}
+
+.inputTiny__input {
+    line-height: 0;
+    padding: 7px;
+    font-size: 0.8rem;
+}
