--- a/src/components/ui/MessageController/message-controller.module.scss
+++ b/src/components/ui/MessageController/message-controller.module.scss
@@ -2,10 +2,19 @@
     position: absolute;
     left: 0;
     bottom: 0;
-    margin: 0 24px 16px 24px;
+    padding: 16px 16px;
     max-width: 100vw;
     display: flex;
     flex-direction: column;
+    backdrop-filter: blur(2px);
+}
+
+.container > div[role='alert'] {
+    box-shadow: 0 0 5px rgb(0 0 0 / 40%);
+}
+
+.container > div[role='alert']:first-child {
+    margin-top: 0;
 }
 
 .container__apaga_tudo {
