--- a/src/assets/back/scss/global.module.scss
+++ b/src/assets/back/scss/global.module.scss
@@ -62,6 +62,18 @@
         }
     }
 }
+/*------------ GLOBAL DATAGRID TABLE ------------*/
+/*
+Referente as areas mais genéricas dos Datagrids. 
+Coisas mais especificas como Cells serão especificadas nos scss de cada módulo.
+*/
+.table_panel {
+    flex-grow: 1;
+
+    .table_container {
+        height: 100%;
+    }
+}
 /*----------------- GLOBAL MISC -----------------*/
 .text_margin_left {
     margin-left: 8px;
